--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -15,6 +15,9 @@
         z-index: 1;
 
         .section-text{
+            h1{
+                margin-bottom: 30px;
+            }
             .add-to-bag-btn{
                 display: flex;
                 align-items: center;
